# Pentris

./: CMakeLists.txt  README.md  startGame.sh
app/: CMakeLists.txt
app/include/: input.h  music.h  pentris.h  random.h  renderer.h  score.h  tune_thread.h
app/src/: input.c  main.c  pentris.c  random.c  renderer.c  score.c  tune_thread.c
hal/include/hal/: button.h  buzzer.h  display_linux.h  gpio.h  joystick.h  music.h  pru_shared.h  util.h
hal/src/: button.c  buzzer.c  display_linux.c  gpio.c  joystick.c  music.c  pru_shared.c  util.c
pru/: CMakeLists.txt  Makefile  display_pru.c  exportPins.sh
